Fix download links and live chat spacing

--- a/src/pages/StreamPage.module.scss
+++ b/src/pages/StreamPage.module.scss
@@ -222,7 +222,7 @@
 .chatMessages {
   display: flex;
   flex-direction: column-reverse;
-  gap: 2px;
+  gap: 5px;
   padding: 8px;
   height: calc(100dvh - 154px);
   overflow: hidden;
